<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/chocolate"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="请选择："
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_dialog_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/title_dialog_view"
        android:textSize="25sp" />
    
    <Button
        android:id="@+id/btn_dialog_delete_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_favourite_delete"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_cancel"
        android:textSize="25sp" />

</LinearLayout>