<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <LinearLayout
        android:id="@+id/login_form"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    	android:background="@drawable/login"
        android:orientation="vertical" >

        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            /> 
        
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:textSize="30sp"
            android:singleLine="true"/>

        <!-- <CheckBox
            android:id="@+id/rememberTele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:textSize="30sp"
            android:text="@string/action_remember_tele" /> -->

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            

        <Button
                android:id="@+id/sign_in_button"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:textSize="30sp"
                android:text="@string/action_sign_in_short" />
     

           <Button
                android:id="@+id/btn_register"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:textSize="30sp"
                android:enabled="false"
                android:text="@string/action_sign_in_register" />
        </LinearLayout>
    </LinearLayout>

</merge>